--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
   <body>
     <button id="start">Start Recording</button>
     <button id="stop">Stop Recording</button>
+    <button id="clear">Clear Output</button>
     <div id="transcription"></div>
+    <img
+      id="poseGif"
+      style="display: none; max-width: 100%; margin-top: 20px"
+    />
     <script src="bundle.js"></script>
   </body>
 </html>
