--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Amazon Transcribe Example</title>
+    <title>SignifyAI</title>
   </head>
   <body>
     <button id="start">Start Recording</button>
