--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>SignifyAI</title>
   </head>
   <body>
     <button id="start">Start Recording</button>
     <button id="stop">Stop Recording</button>
     <button id="clear">Clear Output</button>
+    <br /><br />
+    <input type="text" id="textInput" placeholder="Enter text here" />
+    <button id="sendText">Send Text</button>
     <div id="transcription"></div>
     <img
       id="poseGif"
