--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>SignifyAI</title>
   </head>
   <body>
+    <h1>SignifyAI</h1>
     <button id="start">Start Recording</button>
     <button id="stop">Stop Recording</button>
     <button id="clear">Clear Output</button>
